k8s/base/namespace-config.yaml
# Kubernetes Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: freedom-stock
  labels:
    name: freedom-stock
    environment: production
